--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
+    "firebase-mock": "^2.3.2",
     "jest-dom": "^4.0.0",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.9"
